4.6.3:
  * Provide "dbenv.txn_recover()" and "txn.discard()", for fully
    support recovery of distributed transactions.
  * Export "DB_XIDDATASIZE", for GID of distributed transactions.
  * If "db_seq_t" and PY_LONG_LONG are not compatible, compiler
    should show a warning while compiling, and the generated code
    would be incorrect but safe to use. No crash. Added sanity
    check in the testunit to verify this is not the case, and
    the datatypes are 64 bit width in fact.
  * Solve a compilation warning when including "bsddb.h"
    in other projects. (George Feinberg)

4.6.2:
  * Support for MVCC (MultiVersion Concurrency Control).
  * Support for DB_DSYNC_LOG, DB_DSYNC_DB and DB_OVERWRITE flags.
  * Move old documentation to ReST format. This is important for several
    reasons, notably to be able to integrate the documentation "as is"
    in python official docs (from Python 2.6).
  * Don't include Berkeley DB documentation. Link to the online version.
  * DBSequence objects documented.
  * DBSequence.get_key() didn't check for parameters. Fixed.
  * If a DB is closed, its children DBSequences will be
    closed also.
  * To be consistent with other close methods, you can call
    "DBSequence.close()" several times without error.
  * If a Sequence is opened inside a transaction, it will be
    automatically closed if the transaction is aborted. If the
    transaction is committed and it is actually a subtransaction, the
    sequence will be inherited by the parent transaction.
  * Be sure "db_seq_t" and "long long" are compatible. **Disabled because
    MS Windows issues to be investigated.**
  * Documented the already available DBEnv methods: "dbremove",
    "dbrename", "set_encrypt", "set_timeout", "set_shm_key",
    "lock_id_free", "set_tx_timestamp", "lsn_reset" and "log_stat".
  * Completed and documented "DBEnv.txn_stat()".
  * Completed and documented "DBEnv.lock_stat()".
  * Documented the already available DB methods: "set_encrypt", "pget".